service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-1-service
spec:
  type: NodePort
  selector:
    app: webserver-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pod-2-service
spec:
  type: NodePort
  selector:
    app: webserver-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: pod-3-service
spec:
  type: NodePort
  selector:
    app: webserver-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
