ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-pods
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: cloudmile.info
      http:
        paths:
          - path: /v1/helloworld1
            pathType: Prefix
            backend:
              service:
                name: pod-1-service
                port:
                  number: 3000
          - path: /v1/helloworld2
            pathType: Prefix
            backend:
              service:
                name: pod-2-service
                port:
                  number: 3001
          - path: /v1/helloworld3
            pathType: Prefix
            backend:
              service:
                name: pod-3-service
                port:
                  number: 3002
